# marching-tetrahedra

./: .gitignore  LICENSE  README.md  commands  compile.sh  main  main.cpp  mpi_test.cpp  mpi_testcpp
projeto/: Sphere.cpp  main.cpp
projeto-escrita/: .gitignore  Array3D.h  CMakeLists.txt  Decimate.cpp  Decimate.h  DecimateDeprecated.cpp  DecimateDeprecated.h  Gyroid.cpp  LinkedList.cpp  LinkedList.h  compile.sh  main.cpp
projeto-leitura/: CMakeLists.txt  main.cpp
